Content no longer shifts because of scroll bar

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,10 +11,11 @@
 {
     height: 100vh;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 100vw;
     grid-template-rows: max-content auto;
     grid-template-areas: "nav-area" "scroll-area";
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     .sticky-nav
     {
